# components/dms2223backend/dms2223backend/openapi/spec.yml
@@ -141,7 +141,7 @@ paths:
       summary: Gets the answers for a question
       description: |
         Fetches the full answers for a given question.
-      operationId: dms2223backend.presentation.rest.answer.list_all_for_discussion
+      operationId: dms2223backend.presentation.rest.comment.list_all_for_discussion
       parameters:
         - $ref: '#/components/parameters/QuestionIdPathParam'
       responses:
@@ -559,62 +559,61 @@ paths:
   #     security:
   #       - user_token: []
   #         api_key: []
-  # /answers/reports:
-  #   get:
-  #     summary: Get a list of answer reports.
-  #     description: |
-  #       This operation gets a listing of answer reports.
-
-  #       Several parameters can be used to filter out the reports according to
-  #       their status.
-  #     # operationId: TODO: Set to the fully-qualified name of the function handling the operation
-  #     parameters:
-  #       - name: pending
-  #         description: |
-  #           Set to `false` to exclude the pending reports from the listing.
-  #         in: query
-  #         required: false
-  #         schema:
-  #           type: boolean
-  #           default: true
-  #       - name: accepted
-  #         description: |
-  #           Set to `false` to exclude the accepted reports from the listing.
-  #         in: query
-  #         required: false
-  #         schema:
-  #           type: boolean
-  #           default: true
-  #       - name: rejected
-  #         description: |
-  #           Set to `false` to exclude the rejected reports from the listing.
-  #         in: query
-  #         required: false
-  #         schema:
-  #           type: boolean
-  #           default: true
-  #     responses:
-  #       '200':
-  #         description: Listing of answer reports
-  #         content:
-  #           'application/json':
-  #             schema:
-  #               $ref: '#/components/schemas/AnswerReportsListModel'
-  #             example:
-  #               - id: 1
-  #                 aid: 7
-  #                 reason: Unrelated to the question
-  #                 status: ACCEPTED
-  #                 owner:
-  #                   username: user4
-  #                 timestamp: 1665922785
-  #     tags:
-  #       - moderation
-  #       - answers
-  #       - reports
-  #     security:
-  #       - user_token: []
-  #         api_key: []
+  /answers/reports:
+    get:
+      summary: Get a list of answer reports.
+      description: |
+        This operation gets a listing of answer reports.
+        Several parameters can be used to filter out the reports according to
+        their status.
+      operationId: dms2223backend.presentation.rest.moderate.list_reports_answer
+      parameters:
+        - name: pending
+          description: |
+            Set to `false` to exclude the pending reports from the listing.
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - name: accepted
+          description: |
+            Set to `false` to exclude the accepted reports from the listing.
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: true
+        - name: rejected
+          description: |
+            Set to `false` to exclude the rejected reports from the listing.
+          in: query
+          required: false
+          schema:
+            type: boolean
+            default: true
+      responses:
+        '200':
+          description: Listing of answer reports
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/AnswerReportsListModel'
+              example:
+                - id: 1
+                  aid: 7
+                  reason: Unrelated to the question
+                  status: ACCEPTED
+                  owner:
+                    username: user4
+                  timestamp: 1665922785
+      tags:
+        - moderation
+        - answers
+        - reports
+      security:
+        - user_token: []
+          api_key: []
   # /answers/reports/{arid}:
   #   put:
   #     summary: Change the status of an answer report
@@ -1131,7 +1130,7 @@ components:
         type: integer
       required: true
     CommentIdPathParam:
-      name: cid
+      name: id
       description: Comment identifier.
       in: path
       schema:
