# components/dms2223backend/dms2223backend/presentation/rest/comment.py
@@ -10,7 +10,7 @@ from dms2223backend.service import CommentsServices
 
 
 
-def comment(body: Dict) -> Tuple[Union[Dict, str], Optional[int]]:
+def comment(body: Dict, id: int) -> Tuple[Union[Dict, str], Optional[int]]:
     """Comments a discussion if the requestor has the discussion role.
 
     Args:
@@ -26,8 +26,8 @@ def comment(body: Dict) -> Tuple[Union[Dict, str], Optional[int]]:
     """
     with current_app.app_context():
         try:
-            answer = CommentsServices.comment(
-                body['discussionid'], body['content'], current_app.db
+            comment = CommentsServices.comment(
+                body['discussionid'], id, body['content'], current_app.db
             )
         except ValueError:
             return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)
@@ -35,10 +35,31 @@ def comment(body: Dict) -> Tuple[Union[Dict, str], Optional[int]]:
             return('User does not exist', HTTPStatus.NOT_FOUND.value)
         except OperationError:
             return ('The user with the given username can not create a discussion', HTTPStatus.FORBIDDEN.value)
-    return (answer, HTTPStatus.OK.value)
+    return (comment, HTTPStatus.OK.value)
 
+def list_all_for_discussion(id: int) -> Tuple[Union[List[Dict], str], Optional[int]]:
+    """Lists the comments of an answer if the requestor has the discussion role.
 
-def list_all_for_answer(answerid: int) -> Tuple[Union[List[Dict], str], Optional[int]]:
+    Args:
+        - answerId (int): Answer id.
+        - token_info (Dict): A dictionary of information provided by the security schema handlers.
+
+    Returns:
+        - Tuple[Union[List[Dict], str], Optional[int]]: On success, a tuple with the dictionary of the
+          new discussion data and a code 200 OK. On error, a description message and code:
+            - 400 BAD REQUEST when a mandatory argument is missing.
+    """
+    with current_app.app_context():
+        try:
+            comments: List[Dict] = CommentsServices.list_all_for_discussion(
+                id, current_app.db
+            )
+        except ValueError:
+            return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)
+
+    return (comments, HTTPStatus.OK.value)
+    
+def list_all_for_answer(id: int) -> Tuple[Union[List[Dict], str], Optional[int]]:
     """Lists the comments of an answer if the requestor has the discussion role.
 
     Args:
@@ -53,14 +74,14 @@ def list_all_for_answer(answerid: int) -> Tuple[Union[List[Dict], str], Optional
     with current_app.app_context():
         try:
             comments: List[Dict] = CommentsServices.list_all_for_answer(
-                answerid, current_app.db
+                id, current_app.db
             )
         except ValueError:
             return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)
 
     return (comments, HTTPStatus.OK.value)
 
-def get_comment(answerid: int) -> Tuple[Union[Dict, str], Optional[int]]:
+def get_comment(discussionid: int, answerid: int) -> Tuple[Union[Dict, str], Optional[int]]:
     """Obtains the comment of a discussion and user.
 
     Args:
@@ -75,10 +96,10 @@ def get_comment(answerid: int) -> Tuple[Union[Dict, str], Optional[int]]:
     """
     with current_app.app_context():
         try:
-            answer: Dict = CommentsServices.get_comment(
-                answerid,current_app.db
+            comment: Dict = CommentsServices.get_comment(
+                discussionid, answerid,current_app.db
             )
         except ValueError:
             return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)
 
-    return (answer, HTTPStatus.OK.value)
+    return (comment, HTTPStatus.OK.value)
